# cgnuplot

./: .gitignore  CMakeLists.txt  Makefile  README.md  plotting.txt
src/: cgnuplot.c  cgnuplot.h  cgpentry.c  cgpentry.h  cgpfigure.c  cgpfigure.h  cgppoint.c  cgppoint.h  cgpstack.c  cgpstack.h
test/: gnuplot_settings.txt  testing.c
